--- a/gensphere-python-sdk/pyproject.toml
+++ b/gensphere-python-sdk/pyproject.toml
@@ -6,10 +6,13 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.11,<=3.13"
+python = ">=3.11,<3.13"
 fastapi = "^0.114.1"
 uvicorn = "^0.30.6"
 crewai = {extras = ["tools"], version = "^0.55.2"}
+pyautogen = "^0.3.0"
+scikit-learn = "^1.5.2"
+xgboost = "^2.1.1"
 
 
 [build-system]
